[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workflow-manager"
version = "0.1.0"
description = "Your library description"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "platformdirs>=3.0.0",
    "requests>=2.28.0"
    # 将你的依赖项列在这里
]

[project.urls]
Homepage = "https://github.com/creeponsky/workflow-manager"
Documentation = "https://workflow-manager.readthedocs.io/"
Repository = "https://github.com/creeponsky/workflow-manager.git"
