[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "task-weaver"
version = "0.1.0"
description = "A flexible task scheduling and server management library"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "creeponsky", email = "wenhaozuo1@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "platformdirs>=3.0.0",
    "requests>=2.28.0"
    # 将你的依赖项列在这里
]

[project.urls]
Homepage = "https://github.com/creeponsky/task-weaver"
Documentation = "https://task-weaver.readthedocs.io/"
Repository = "https://github.com/creeponsky/task-weaver.git"
