[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "task-weaver"
version = "0.1.0"
description = "A flexible task scheduling and server management library"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "creeponsky", email = "wenhaozuo1@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.6.2",
    "certifi>=2024.8.30", 
    "httpcore>=1.0.6",
    "httpx>=0.27.2",
    "idna>=3.10",
    "pydantic>=2.9.2",
    "pydantic_core>=2.23.4",
    "sniffio>=1.3.1",
    "typing_extensions>=4.12.2"
]

[project.urls]
Homepage = "https://github.com/creeponsky/task-weaver"
Documentation = "https://task-weaver.readthedocs.io/"
Repository = "https://github.com/creeponsky/task-weaver.git"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]